# spektrum

./: .gitignore  README.md  color_quiz.csv  movie_character_quiz.csv  pyproject.toml  server.py
admin_panel/: .gitignore  env.example  package.json  pnpm-lock.yaml
admin_panel/src/lib/: types.ts
admin_panel/src/lib/components/: CSVTable.svelte  admin-editor.svelte  auth-component.svelte  changes-review.svelte  character-bank.svelte  character-upload-dialog.svelte  media-table.svelte  questions-table.svelte  sets-table.svelte  sidebar.svelte
admin_panel/src/lib/components/table/: editable-input.svelte  pagination.svelte  search-input.svelte  table-container.svelte
admin_panel/src/lib/stores/: admin-data.ts  data-manager.svelte.ts
admin_panel/src/routes/: +page.svelte
frontend/: .gitignore  env.example  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: utils.ts
frontend/src/lib/components/: NotificationList.svelte  coverable-element.svelte  join-lobby-by-code.svelte  join-lobby-card.svelte  question-example.svelte  reconnect-card.svelte  set-selector.svelte  websocket-disconnect-overlay.svelte
frontend/src/lib/components/game/: admin-controls.svelte  admin-game-screen.svelte  admin-question-view.svelte  admin-screen.svelte  answer-progress.svelte  game-over.svelte  game-screen.svelte  home-screen.svelte  lobby-view.svelte  player-game-screen.svelte  question-view.svelte  round-timer.svelte  (+4 more)
frontend/src/lib/services/: broadcast.service.ts
frontend/src/lib/stores/: game-actions.ts  game.svelte.ts  notification-store.svelte.ts  notification-store.test.ts  stream-timer.store.svelte.ts  stream.store.svelte.ts  timer-store.svelte.ts  timer.svelte.ts  timer.test.ts  ui.store.svelte.ts  websocket-fsm.test.ts  websocket.svelte.ts  youtube-store.svelte.ts  youtube-store.ts
frontend/src/lib/types/: game.ts  stream.types.ts  youtube.d.ts
frontend/src/lib/utils/: logger.ts  session.ts  stream.utils.ts
frontend/src/params/: sixDigits.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/howto/: +page.svelte
frontend/src/routes/stream/: +layout.svelte  +page.svelte  +page.ts
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.example.toml  env.example  fly.toml
server/data/: .gitignore  color_quiz.csv  movie_character_quiz.csv  questions.example.json  questions.json  schema.sql
server/src/: db.rs  game.rs  game_manager.rs  main.rs  messages.rs  models.rs  question.rs  server.rs  spotify.rs  uuid.rs
server/src/question/: character.rs  color.rs  mod.rs
spotify-play/: playlist_download.py  pyproject.toml  spot_to_yt.py
stress_test/: Cargo.toml
stress_test/src/: main.rs
svelte_frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
svelte_frontend/src/: app.css  app.html
svelte_frontend/src/lib/components/: NotificationList.svelte
svelte_frontend/src/lib/stores/: game-actions.ts  game.ts  notification-store.ts  timer-store.ts  websocket.ts  youtube-store.ts
svelte_frontend/src/lib/types/: game.ts  youtube.d.ts
svelte_frontend/src/lib/utils/: logger.ts
svelte_frontend/src/routes/: +layout.svelte  +page.svelte
utils/: .gitignore  available_checker.py  converter.py  db_csv_conv.py  get_token.py  playlist_download.py  pyproject.toml  spot_playlist_to_spektrum_info.py  spot_to_yt.py  spot_to_yt_movie_format.py  spotplay.py  strip_yt.py  yt_link_checker.py
web/: index.html  script.js  styles.css
(+60 files in other folders)
