[package]
name = "spektrum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws", "http2", "multipart", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
clap = { version = "4.5.23", features = ["derive"] }
fastrand = "2.3.0"
futures-util = "0.3.31"
thiserror = "2.0.7"
regex = "1.11.1"
lazy_static = "1.5.0"
http = "1.2.0"
config = "0.15.4"
bytes = "1.9.0"
chrono = "0.4.39"
flate2 = "1.0.35"
aws-sdk-s3 = "1.71.0"
dashmap = "6.1.0"
tower_governor = "0.7.0"
