[package]
name = "spektrum"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws", "http2", "multipart", "macros"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
fastrand = "2.3.0"
futures-util = "0.3.31"
thiserror = "2.0.17"
regex = "1.12.2"
lazy_static = "1.5.0"
http = "1.3.1"
config = "0.15.18"
bytes = "1.10.1"
chrono = "0.4.42"
flate2 = "1.1.5"
aws-sdk-s3 = "1.115.0"
dashmap = "6.1.0"
tower_governor = "0.8.0"
arc-swap = "1.7.1"

[dev-dependencies]
tempfile = "3.23.0"
